fixed project wrap overflow with min width

--- a/styles.css
+++ b/styles.css
@@ -132,7 +132,7 @@ nav ul li a:hover {
   justify-content: center;
   gap: 5rem;
   max-width: 1300px;
-  min-width: 500px;
+  min-width: 350px;
 }
 
 .project-card {
@@ -257,10 +257,7 @@ nav ul li a:hover {
   background: var(--colour1);
   transition: all 300ms ease-in-out;
   background: rgba(0,0,0, 0.7);
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
+  inset: 0;
   align-items: center;
   z-index: 9999;
 }
@@ -353,5 +350,19 @@ nav ul li a:hover {
 
   .gallery-text {
     align-items: center;
+  }
+
+  .carousel-wrap {
+    grid-template-columns: 4vw calc(92vw) 4vw;
+  }
+  
+  .slider {
+    display: flex;
+    transition: transform 250ms ease;
+    max-height: 600px;
+  }
+  
+  .slider img {
+    flex: 0 0 calc(calc(92vw) / var(--section-size));
   }
 }
